// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TeamSelect when the data is loading renders as expected 1`] = `
<WithStyles(CircularProgress)
  color="secondary"
/>
`;

exports[`TeamSelect when the server returns an error renders as expected 1`] = `""`;

exports[`TeamSelect when the server returns data and the user belongs to a single team renders as expected 1`] = `
<WithStyles(FormControl)>
  <WithStyles(WithFormControlContext(Select))
    name="team"
    value={1}
  >
    <WithStyles(MenuItem)
      key="1"
      value={1}
    >
      Test Team
    </WithStyles(MenuItem)>
  </WithStyles(WithFormControlContext(Select))>
</WithStyles(FormControl)>
`;

exports[`TeamSelect when the server returns data and the user belongs to no teams renders as expected 1`] = `
<WithStyles(FormControl)>
  <WithStyles(WithFormControlContext(Select))
    name="team"
    value=""
  />
</WithStyles(FormControl)>
`;
